Fix for https://www.pivotaltracker.com/s/projects/838407/stories/58207726 removed text justification and switched to standard align left

--- a/sites/all/themes/wto-stdf/sass/blocks.scss
+++ b/sites/all/themes/wto-stdf/sass/blocks.scss
@@ -155,7 +155,7 @@
   .view-nodequeue-thematic-activities {	
     p {	
       font-size: 0.8em; 
-      text-align: justify;
+      text-align: left;
     }		
   }
   
